changed command -> commands for swipl process calls